--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ NODE_ENV = "development"
 
 #Admin Credentials
 SELLER_EMAIL = "admin@example.com"
-SELLER_PASSWORD = "admin123"
+SELLER_PASSWORD = "greatstack123"
 
 # MongoDB Setup
 MONGODB_URI = "mongodb+srv://kalyan:Kalyan1234@cluster0.bnp8u3p.mongodb.net"
